# metal

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Configure.cmake  Deploy.cmake  LICENSE  README.md  Test.cmake  accumulate_8hpp_source.html  add_8hpp_source.html  all_8hpp_source.html  and_8hpp_source.html  annotated.html  any_8hpp_source.html  apply_8hpp_source.html  appveyor.yml  arg_8hpp_source.html  arithmetic_8hpp_source.html  assert_8hpp_source.html  at_8hpp_source.html  at__key_8hpp_source.html  back_8hpp_source.html  bind_8hpp_source.html  call_8hpp_source.html  cast_8hpp_source.html  classes.html  clear_8hpp_source.html  comparison_8hpp_source.html  concepts.html  cond_8hpp_source.html  conditional_8hpp_source.html  contains_8hpp_source.html  copy_8hpp_source.html  copy__if_8hpp_source.html  count_8hpp_source.html  count__if_8hpp_source.html  dec_8hpp_source.html  defer_8hpp_source.html  (+146 more)
doc/: CMakeLists.txt  Doxyfile.in  concepts.md  footer.html  header.html  index.md  introduction.md  layout.xml  manual.md  motivation.md  overview.md  portability.md  stylesheet.css
doc/css/: metal.css
doc/js/: metal.js  strap.js
example/: CMakeLists.txt
example/functional/traits/: is_evaluable.cpp
example/include/: example.hpp
example/src/: chain.cpp  church.cpp  expression.cpp  lambda.cpp  list.cpp  literal.cpp  manual.cpp  map.cpp  mpl.cpp  msvc-default-challenge-v1-default-fails.cpp  msvc-default-challenge-v1-default-matches.cpp  msvc-default-challenge-v1-default-omitted.cpp  msvc-default-challenge-v1.cpp  msvc-default-challenge-v2-default-fails.cpp  msvc-default-challenge-v2-default-matches.cpp  msvc-default-challenge-v2-default-omitted.cpp  msvc-default-challenge-v2.cpp  msvc-default-challenge-v3-default-fails.cpp  msvc-default-challenge-v3-default-matches.cpp  msvc-default-challenge-v3-default-omitted.cpp  msvc-default-challenge-v3.cpp  msvc-default-challenge-v4-default-fails.cpp  msvc-default-challenge-v4-default-matches.cpp  msvc-default-challenge-v4-default-omitted.cpp  msvc-default-challenge-v4.cpp  msvc-default-challenge-v5-default-fails.cpp  msvc-default-challenge-v5-default-matches.cpp  msvc-default-challenge-v5-default-omitted.cpp  msvc-default-challenge-v5.cpp  msvc-default-challenge-v6-default-fails.cpp  msvc-default-challenge-v6-default-matches.cpp  msvc-default-challenge-v6-default-omitted.cpp  msvc-default-challenge-v6.cpp  msvc-default-challenge-v7-default-fails.cpp  msvc-default-challenge-v7-default-matches.cpp  msvc-default-challenge-v7-default-omitted.cpp  msvc-default-challenge-v7.cpp  msvc-default-challenge-v8-default-fails.cpp  msvc-default-challenge-v8-default-matches.cpp  msvc-default-challenge-v8-default-omitted.cpp  (+7 more)
example/src/concepts/: expression.cpp  function.cpp  lambda.cpp  list.cpp  map.cpp  nullable.cpp  number.cpp  optional.cpp  pair.cpp  strict.cpp  value.cpp
example/src/expression/: eval.cpp
example/src/functional/: eval.cpp
example/src/manual/: homoiconicity.cpp
example/src/number/: arithmetic.cpp  comparison.cpp  enumerate.cpp  logical.cpp  number.cpp
example/src/optional/: conditional.cpp  eval.cpp  just.cpp  nothing.cpp  optional.cpp
example/src/pair/: first.cpp  pair.cpp  second.cpp
example/src/tutorial/: booleans.cpp  chain.cpp  church.cpp  literal.cpp
test/: CMakeLists.txt  seq.cpp
test/compat/: variadic.cpp
test/core/: always.cpp  apply.cpp  arg.cpp  arithmetic.cpp  assert.cpp  bind.cpp  call.cpp  function.cpp  identity.cpp  if.cpp  integral.cpp  invariant.cpp  is_callable.cpp  logical.cpp  nested_template_trait.cpp  nested_type_trait.cpp  protect.cpp  quote.cpp  trait.cpp  traits.cpp  traits_factory.cpp  void.cpp
test/core/compat/: variadic.cpp
test/datatypes/: arithmetic.cpp  integrals.cpp
test/deployment/: CMakeLists.txt
test/formatting/: CMakeLists.txt
test/header/: CMakeLists.txt
test/include/: test.hpp
test/include/test/: assert.hpp  atoms.hpp  containers.hpp  expressions.hpp  functions.hpp  integrals.hpp  lambda.hpp  main.hpp  numbers.hpp  preprocessor.hpp  sequences.hpp  types.hpp  values.hpp  variadic.hpp  wrap.hpp
test/integrals/: arithmetic.cpp  integral.cpp  logical.cpp
test/lambda/: apply.cpp  arg.cpp  arithmetic.cpp  assert.cpp  bind.cpp  call.cpp  evaluator.cpp  forward.cpp  function.cpp  identity.cpp  if.cpp  integral.cpp  invoke.cpp  lambda.cpp  logical.cpp  nested_template_trait.cpp  nested_type_trait.cpp  nullary.cpp  pack.cpp  protect.cpp  quote.cpp  quoter.cpp  traits.cpp  traits_factory.cpp  unpack.cpp  void.cpp
test/lambda/detail/: nested_template_trait.cpp  nested_type_trait.cpp  traits_factory.cpp
test/metafunctional/: apply.cpp  arg.cpp  arithmetic.cpp  bind.cpp  call.cpp  eval.cpp  evaluator.cpp  forward.cpp  function.cpp  invoke.cpp  lambda.cpp  logical.cpp  pack.cpp  protect.cpp  quote.cpp  quoter.cpp  test.hpp  traits.cpp  traits_factory.cpp  unpack.cpp
test/metafunctional/traits/: is_applicable.cpp  is_callable.cpp  is_evaluable.cpp  is_function.cpp  is_quotable.cpp
test/preprocessor/: trait.cpp
test/resources/: test.hpp
test/sequences/: equal.cpp  list.cpp  seq.cpp  tag.cpp
test/src/: metal.cpp
test/src/algebra/: arithmetic.cpp  if.cpp  logical.cpp
test/src/algorithm/: list.cpp  size.cpp  tag.cpp
test/src/core/: arithmetic.cpp  assert.cpp  identity.cpp  inherit.cpp  introspection.cpp  logical.cpp
test/src/detail/: introspection.cpp
test/src/expression/: eval.cpp
test/src/functional/: apply.cpp  arg.cpp  bind.cpp  call.cpp  eval.cpp  evaluator.cpp  function.cpp  identity.cpp  if.cpp  just.cpp  lambda.cpp  protect.cpp  quote.cpp  quoter.cpp  verbatim.cpp
test/src/lambda/: apply.cpp  arg.cpp  bind.cpp  protect.cpp  quote.cpp
test/src/list/: list.cpp
test/src/map/: map.cpp
test/src/metafunctional/: apply.cpp  call.cpp  eval.cpp  lambda.cpp
test/src/metal/: core.cpp  expression.cpp  lambda.cpp  list.cpp  map.cpp  number.cpp  optional.cpp  pair.cpp
test/src/number/: arithmetic.cpp  comparison.cpp  logical.cpp  query.cpp
test/src/optional/: conditional.cpp  just.cpp  maybe.cpp  (+2 more)
test/unit/: CMakeLists.txt
(+867 files in other folders)
